Entity support via annotations
Allows Litebridge to conform to a more traditional entity-based database mapping approach, while still retaining its DTO-first policy.
These annotations can be added directly to "DTO" classes to convert them to traditional entities, simplifying run-time registration.
Additional javadocs added.
README updated.